--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     },
     "main": "lib/index.js",
     "dependencies": {
+        "@sendgrid/mail": "^7.7.0",
         "firebase-admin": "^11.8.0",
         "firebase-functions": "^4.3.1",
         "node-input-validator": "^4.5.1"
