--- a/functions/src/.example.env
+++ b/functions/src/.example.env
@@ -1,3 +1,4 @@
 SENDGRID_API_KEY={YOUR_API_KEY}
 NOTIFICATION_FROM_EMAIL={YOUR_EMAIL}
 NOTIFICATION_TO_EMAIL={YOUR_EMAIL}
+RE_CAPTCHA_SECRET_KEY={YOUR_SECRET_KEY}
