--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "nuxt-app",
     "private": true,
     "type": "module",
+    "packageManager": "yarn@1.22.18",
     "scripts": {
         "typecheck": "nuxi typecheck",
         "build": "nuxt build",
