--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "typecheck": "nuxi typecheck",
         "build": "nuxt build",
-        "dev": "nuxt dev",
-        "generate": "nuxt generate",
+        "dev": "nuxt dev --dotenv .env.local",
+        "generate:local": "nuxt generate --dotenv .env.local",
+        "generate:prod": "nuxt generate --dotenv .env.prod",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare"
     },
