--- a/functions/.example.env
+++ b/functions/.example.env
@@ -2,3 +2,4 @@ SENDGRID_API_KEY={YOUR_API_KEY}
 NOTIFICATION_FROM_EMAIL={YOUR_EMAIL}
 NOTIFICATION_TO_EMAIL={YOUR_EMAIL}
 RE_CAPTCHA_SECRET_KEY={YOUR_SECRET_KEY}
+SECURITY_TOKEN={YOUR_TOKEN}
