added unsubscribe page

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,6 @@
+SUBSCRIBE_TO_NEWSLETTERS_URL={YOUR_SUBSCRIBE_TO_NEWSLETTERS_URL}
+UNSUBSCRIBE_TO_NEWSLETTERS_URL={YOUR_UNSUBSCRIBE_TO_NEWSLETTERS_URL}
+CONTACT_FORM_URL={YOUR_CONTACT_FORM_URL}
+
 RECAPTCHA_SECRET_KEY={YOUR_RECAPTCHA_SECRET_KEY}
 GOOGLE_ANALYTICS_ID={YOUR_GOOGLE_ANALYTICS_ID}
