--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -15,10 +15,10 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v2
               with:
-                  node-version: "18"
+                  node-version: "18.16.0"
 
             - name: Install dependencies
-              run: yarn install --force
+              run: yarn install
 
             - name: Build static site
               run: yarn generate:prod
