--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -15,7 +15,8 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v2
               with:
-                  node-version: "18.16.0"
+                  node-version: "18"
+                  yarn-version: "latest"
 
             - name: Install dependencies
               run: yarn install
