--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "nuxt-app",
     "private": true,
     "type": "module",
-    "packageManager": "yarn@1.22.18",
+    "engines": {
+        "yarn": ">=3.5.0"
+    },
     "scripts": {
         "typecheck": "nuxi typecheck",
         "build": "nuxt build",
