--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -16,6 +16,7 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: "18"
+                  yarn-version: "latest"
 
             - name: Install dependencies
               run: yarn install
