--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -16,13 +16,16 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: "18"
-                  yarn-version: "latest"
 
-            - name: Install dependencies
-              run: yarn install
+            - name: Run install
+              uses: borales/actions-yarn@v4
+              with:
+              cmd: install # will run `yarn install` command
 
-            - name: Build static site
-              run: yarn generate:prod
+            - name: Build production bundle
+              uses: borales/actions-yarn@v4
+              with:
+              cmd: generate:prod # will run `yarn generate:prod` command
 
             - name: Deploy to Netlify
               uses: jsmrcaga/action-netlify-deploy@v2.0.0
