--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -45,6 +45,6 @@ jobs:
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
                   NETLIFY_DEPLOY_MESSAGE: "Deployed from GitHub action"
                   NETLIFY_DEPLOY_TO_PROD: true
-                  build_directory: .output/public
+                  build_directory: dist
                   install_command: "echo Skipping installing the dependencies"
                   build_command: "echo Skipping building the web files"
