--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -39,12 +39,23 @@ jobs:
                   cd ..
 
             - name: Deploy to Netlify
-              uses: jsmrcaga/action-netlify-deploy@v2.0.0
+              uses: South-Paw/action-netlify-cli@v2
+              id: netlify
               with:
+                  args: "netlify deploy --prod"
+              env:
                   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-                  NETLIFY_DEPLOY_MESSAGE: "Deployed from GitHub action"
                   NETLIFY_DEPLOY_TO_PROD: true
                   build_directory: ".output/public"
-                  install_command: "echo Skipping installing the dependencies"
-                  build_command: "echo Skipping building the web files"
+
+            # - name: Deploy to Netlify
+            #   uses: jsmrcaga/action-netlify-deploy@v2.0.0
+            #   with:
+            #       NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+            #       NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+            #       NETLIFY_DEPLOY_MESSAGE: "Deployed from GitHub action"
+            #       NETLIFY_DEPLOY_TO_PROD: true
+            #       build_directory: ".output/public"
+            #       install_command: "echo Skipping installing the dependencies"
+            #       build_command: "echo Skipping building the web files"
