--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -42,7 +42,7 @@ jobs:
               uses: South-Paw/action-netlify-cli@v2
               id: netlify
               with:
-                  args: "netlify deploy --prod"
+                  args: "deploy --prod"
               env:
                   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
