fix github action

--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -52,10 +52,10 @@ jobs:
                   echo "CONTACT_FORM_URL=$CONTACT_FORM_URL" >> .env.prod
                   echo "::add-mask::$UNSUBSCRIBE_TO_NEWSLETTERS_URL"
                   echo "UNSUBSCRIBE_TO_NEWSLETTERS_URL=$UNSUBSCRIBE_TO_NEWSLETTERS_URL" >> .env.prod
-                  echo "::add-mask::$vars.RE_CAPTCHA_SITE_KEY"
-                  echo "RE_CAPTCHA_SITE_KEY=$vars.RE_CAPTCHA_SITE_KEY" >> .env.prod
-                  echo "::add-mask::$vars.GOOGLE_ANALYTICS_ID"
-                  echo "GOOGLE_ANALYTICS_ID=$vars.GOOGLE_ANALYTICS_ID" >> .env.prod
+                  echo "::add-mask::$RE_CAPTCHA_SITE_KEY"
+                  echo "RE_CAPTCHA_SITE_KEY=$RE_CAPTCHA_SITE_KEY" >> .env.prod
+                  echo "::add-mask::$GOOGLE_ANALYTICS_ID"
+                  echo "GOOGLE_ANALYTICS_ID=$GOOGLE_ANALYTICS_ID" >> .env.prod
 
             - name: Run Generate
               run: |
