--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -45,7 +45,7 @@ jobs:
                   cd ..
 
             - name: Create .env.prod file
-              run: create-env-prod.js
+              run: node create-env-prod.js
               env:
                   SUBSCRIBE_TO_NEWSLETTERS_URL: $SUBSCRIBE_TO_NEWSLETTERS_URL
                   CONTACT_FORM_URL: $CONTACT_FORM_URL
