--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
         "@nuxt/devtools": "latest",
         "@tailwindcss/forms": "^0.5.6",
         "autoprefixer": "^10.4.16",
-        "nuxt": "3.8.0",
+        "nuxt": "^3.15.0",
         "postcss": "^8.4.30",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.4",
         "tailwindcss": "^3.3.3",
-        "typescript": "^5.2.2"
+        "typescript": "^5.7.2"
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.16",
         "@heroicons/vue": "^2.0.18",
         "@types/node": "^20.6.3",
-        "vue-tsc": "^1.8.13"
+        "vue-tsc": "^2.2.0"
     }
 }
