--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
         "postinstall": "nuxt prepare"
     },
     "devDependencies": {
-        "@nuxt/content": "^3.0.0",
+        "@nuxt/content": "3.2.2",
         "@nuxt/devtools": "latest",
         "@tailwindcss/forms": "^0.5.9",
         "autoprefixer": "^10.4.20",
         "nuxt": "^3.16.0",
-        "postcss": "^8.4.49",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.6.9",
-        "tailwindcss": "^3.4.17",
         "typescript": "^5.7.2"
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
+        "@tailwindcss/vite": "^4.0.14",
         "@types/node": "^22.10.5",
+        "tailwindcss": "^4.0.14",
         "vue-tsc": "^2.2.0"
     }
 }
