--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
+        "@huggingface/transformers": "^3.4.0",
         "@tailwindcss/vite": "^4.0.14",
         "@types/node": "^22.10.5",
         "tailwindcss": "^4.0.14",
