--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@huggingface/transformers": "^3.4.0",
         "@tailwindcss/vite": "^4.0.14",
         "@types/node": "^22.10.5",
+        "better-sqlite3": "^12.2.0",
         "tailwindcss": "^4.0.14",
         "vue-tsc": "^2.2.0"
     }
