--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "@nuxt/devtools": "latest",
         "@tailwindcss/forms": "^0.5.9",
         "autoprefixer": "^10.4.20",
-        "nuxt": "3.16.0",
+        "nuxt": "^4.0.2",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.6.9",
         "typescript": "^5.7.2"
@@ -30,5 +30,6 @@
         "better-sqlite3": "^12.2.0",
         "tailwindcss": "^4.0.14",
         "vue-tsc": "^2.2.0"
-    }
+    },
+    "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
