fix the broken sendgrid email functionality

--- a/functions/.example.env
+++ b/functions/.example.env
@@ -1,5 +1,6 @@
-SENDGRID_API_KEY={YOUR_API_KEY}
+MAILGUN_API_KEY={YOUR_MAILGUN_API_KEY}
 NOTIFICATION_FROM_EMAIL={YOUR_EMAIL}
 NOTIFICATION_TO_EMAIL={YOUR_EMAIL}
 RE_CAPTCHA_SECRET_KEY={YOUR_SECRET_KEY}
 SECURITY_TOKEN={YOUR_TOKEN}
+NODE_ENV=development
