--- a/functions/package.json
+++ b/functions/package.json
@@ -3,9 +3,9 @@
     "scripts": {
         "build": "tsc",
         "build:watch": "tsc --watch",
-        "serve": "npm run build && firebase emulators:start --only functions",
-        "shell": "npm run build && firebase functions:shell",
-        "start": "npm run shell",
+        "serve": "yarn build && firebase emulators:start --only functions",
+        "shell": "yarn build && firebase functions:shell",
+        "start": "yarn shell",
         "deploy": "firebase deploy --only functions",
         "logs": "firebase functions:log"
     },
@@ -14,14 +14,16 @@
     },
     "main": "lib/index.js",
     "dependencies": {
-        "@sendgrid/mail": "^7.7.0",
-        "firebase-admin": "^11.8.0",
-        "firebase-functions": "^4.3.1",
+        "firebase-admin": "^13.4.0",
+        "firebase-functions": "^6.4.0",
+        "form-data": "^4.0.4",
+        "mailgun.js": "^12.0.3",
         "node-input-validator": "^4.5.1"
     },
     "devDependencies": {
+        "@types/node": "^24.2.0",
         "firebase-functions-test": "^3.1.0",
-        "typescript": "^4.9.0"
+        "typescript": "^5.9.2"
     },
     "private": true
 }
