--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
         "@huggingface/transformers": "^3.7.1",
+        "@nuxt/image": "^1.11.0",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^24.2.0",
         "better-sqlite3": "^12.2.0",
