--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -4,9 +4,18 @@ on:
     push:
         branches:
             - main
+        paths-ignore:
+            - "content/**"
+            - "audio-summary/**"
+    workflow_run:
+        workflows: ["Generate Audio Summaries"]
+        branches: [main]
+        types:
+            - completed
 
 jobs:
     build:
+        if: ${{ github.event_name == 'push' || github.event.workflow_run.conclusion == 'success' }}
         runs-on: ubuntu-latest
 
         steps:
@@ -15,7 +24,7 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: "22"
+                  node-version: "24"
 
             - name: Remove yarn.lock and node_modules
               run: |
