--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "typecheck": "nuxi typecheck",
         "build": "nuxt build",
         "dev": "nuxt dev --dotenv .env.local",
-        "generate:local": "nuxt generate --dotenv .env.local",
-        "generate:prod": "nuxt generate --dotenv .env.prod",
+        "generate:local": "NODE_OPTIONS='--max-old-space-size=8192' nuxt generate --dotenv .env.local",
+        "generate:prod": "NODE_OPTIONS='--max-old-space-size=8192' nuxt generate --dotenv .env.prod",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare"
     },
