--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "tsx --env-file=.env ./index.ts"
+        "start": "tsx --env-file=.env ./index.ts",
+        "convert": "tsx ./convert-article.ts"
     },
     "keywords": [],
     "author": "",
@@ -14,6 +15,7 @@
         "tsx": "^4.21.0"
     },
     "dependencies": {
+        "@github/copilot-sdk": "^0.1.19",
         "@openai/agents": "^0.4.3",
         "openai": "^6.16.0"
     }
