new article - The Protocol Behind Bluesky: Rethinking Social Media Architecture

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "generate:local": "NODE_OPTIONS='--max-old-space-size=8192' nuxt generate --dotenv .env.local",
         "generate:prod": "NODE_OPTIONS='--max-old-space-size=8192' nuxt generate --dotenv .env.prod",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
+        "postinstall": "nuxt prepare",
+        "convert": "yarn --cwd scripts convert"
     },
     "devDependencies": {
         "@nuxt/content": "^3.11.0",
